--- a/pom.xml
+++ b/pom.xml
@@ -23,15 +23,55 @@
               <updatePolicy>always</updatePolicy>
           </snapshots>
       </repository>
+      <repository>
+          <id>MavenCentral</id>
+          <name>Maven repository</name>
+          <url>http://repo1.maven.org/maven2</url>
+          <releases>
+              <enabled>true</enabled>
+          </releases>
+          <snapshots>
+              <enabled>false</enabled>
+          </snapshots>
+      </repository>
+
+      <!-- LWJGL -->
+      <repository>
+          <id>mavenNatives</id>
+          <name>Maven Natives Repository</name>
+          <url>http://mavennatives.googlecode.com/svn/repo</url>
+          <snapshots>
+              <enabled>true</enabled>
+          </snapshots>
+      </repository>
+
+      <!-- LWJGL -->
+      <repository>
+          <id>slick</id>
+          <name>slick</name>
+          <url>http://slick.cokeandcode.com/mavenrepo</url>
+      </repository>
   </repositories>
 
   <dependencies>
+
+      <dependency>
+          <groupId>org.lwjgl.lwjgl</groupId>
+          <artifactId>lwjgl</artifactId>
+          <version>2.8.2</version>
+      </dependency>
 
       <dependency>
           <groupId>unicode</groupId>
           <artifactId>unicode-constants</artifactId>
           <version>1.0-SNAPSHOT</version>
       </dependency>
+
+      <!-- <dependency> -->
+      <!--     <groupId>net.java.jinput</groupId> -->
+      <!--     <artifactId>jinput-platform</artifactId> -->
+      <!--     <version>2.0.4</version> -->
+      <!-- </dependency> -->
 
       <dependency>
           <groupId>commons-net</groupId>
@@ -48,7 +88,7 @@
     <dependency>
         <groupId>com.googlecode.lanterna</groupId>
         <artifactId>lanterna</artifactId>
-        <version>2.1.7</version>
+        <version>3.0.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
@@ -104,6 +144,49 @@
                   <target>1.7</target>
               </configuration>
           </plugin>
+
+          <plugin>
+              <artifactId>maven-assembly-plugin</artifactId>
+              <configuration>
+                  <archive>
+                      <manifest>
+                          <mainClass>kba.unicodeart.gui.TMEditor</mainClass>
+                      </manifest>
+                  </archive>
+                  <descriptorRefs>
+                      <descriptorRef>jar-with-dependencies</descriptorRef>
+                  </descriptorRefs>
+              </configuration>
+          </plugin>
+          
+            <plugin>
+                <groupId>com.googlecode.mavennatives</groupId>
+                <artifactId>maven-nativedependencies-plugin</artifactId>
+                <version>0.0.6</version>
+                <executions>
+                    <execution>
+                        <id>unpacknatives</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <!--suppress MavenModelInspection (this line is for IDEA)-->
+                            <goal>copy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>kba.unicodeart.gui.TMEditor</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
       </plugins>
   </build>
 </project>
